# codex-metrics-public

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config  llms.txt  main.py  pricing  pyproject.toml
.claude/: settings.local.json
.codex/commands/: close_thread.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  package.yml  publish.yml
config/: public-boundary-rules.toml  security-rules.toml
docs/: TODO.md  active-task-enforcement-spec.md  ai-agents-metrics-policy.md  architecture.md  cli-reference.md  codex-metrics-policy.md  codex-metrics.md  data-invariants.md  data-schema.md  decisions.md  glossary.md  history-pipeline.md  model-tracking-feature-spec.md  new-python-project-agents-template.md  new-python-project-ai-instructions.md  product-framing.md  product-hypotheses.md  public-overlay-sync.md  task-lifecycle-pilot.md  task-lifecycle.md  testing-guide.md
docs/architecture/: ARCH-001-cli-re-exports.md  ARCH-002-domain-split.md  ARCH-003-timestamps-as-datetime.md  ARCH-004-save-metrics-hidden-pop.md  ARCH-005-detect-started-work-location.md  ARCH-006-pipeline-typed-contracts.md  ARCH-007-legacy-supersedes-map.md  ARCH-008-cli-command-reference.md  ARCH-009-subprocess-coverage.md  ARCH-010-bandit-security-scan.md  ARCH-011-radon-metrics.md  ARCH-012-import-linter.md  ARCH-014-extract-usage-resolution-from-cli.md  (+8 more)
metrics/: codex_metrics.json  events.ndjson
oss/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  llms.txt  pyproject.toml
oss/.githooks/: pre-commit
oss/.github/workflows/: ci.yml  publish.yml
oss/config/: public-boundary-rules.toml  security-rules.toml
oss/docs/: ai-agents-metrics-policy.md  architecture.md  cli-reference.md  data-invariants.md  data-schema.md  decisions.md  glossary.md  history-pipeline.md  product-framing.md  testing-guide.md
oss/docs/architecture/: ARCH-001-cli-re-exports.md  ARCH-002-domain-split.md  ARCH-005-detect-started-work-location.md  ARCH-007-legacy-supersedes-map.md  ARCH-008-cli-command-reference.md  ARCH-010-bandit-security-scan.md  ARCH-011-radon-metrics.md  ARCH-015-sqlalchemy-migration.md  ARCH-016-propagate-model-to-derived-tables.md  ARCH-019-global-pylint-rollout.md  ARCH-023-pylint-single-run.md  README.md
oss/docs/findings/: F-002-claude-user-role-is-not-human.md  F-007-practice-within-thread-compression.md  F-008-per-skill-compression-ranking.md  README.md
oss/docs/images/: README.md
oss/scripts/: metrics_cli.py
oss/scripts/permission_audit/: check_permissions.py  claude_glob.py  find_redundant_rules.py
oss/src/ai_agents_metrics/: __init__.py  _report_aggregation.py  _report_buckets.py  _report_template.py  bootstrap.py  cli.py  cli_parser.py  cli_usage.py  commands.py  commands_install.py  commit_message.py  completion.py  cost_audit.py  event_store.py  file_immutability.py  git_state.py  history_compare.py  history_compare_store.py  history_derive.py  history_derive_build.py  history_derive_insert.py  history_ingest.py  history_normalize.py  html_report.py  observability.py  pricing.py  pricing_runtime.py  public_boundary.py  redaction.py  reporting.py  retro_timeline.py  runtime_facade.py  security.py  storage.py  usage_backends.py  usage_resolution.py  workflow_fsm.py
oss/src/ai_agents_metrics/data/: model_pricing.json
oss/src/ai_agents_metrics/domain/: aggregation.py  ids.py  models.py  time_utils.py  validation.py
oss/src/ai_agents_metrics/history/: __init__.py  _ingest_claude.py  _ingest_utils.py  audit.py  compare.py  compare_store.py  derive.py  derive_insert.py  derive_schema.py  ingest.py
oss/src/ai_agents_metrics/history/ingest/: __init__.py  claude.py
oss/src/ai_agents_metrics/runtime_facade/: mutations.py
oss/src/ai_agents_metrics/usage/: resolution.py
oss/src/codex_metrics/: __init__.py  __main__.py  cli.py  commands.py  cost_audit.py  domain.py  git_hooks.py  history_audit.py  history_normalize.py  retro_timeline.py  usage_backends.py  workflow_fsm.py
oss/src/codex_metrics/data/: bootstrap_codex_metrics_policy.md  model_pricing.json
oss/tests/: conftest.py  test_commit_message.py  test_git_state.py  test_history_compare.py  test_history_derive.py  test_history_ingest.py  test_history_pipeline_json.py  test_html_report.py  test_metrics_cli.py  test_metrics_domain.py  test_public_boundary.py  test_public_overlay.py  test_security.py  test_storage_roundtrip.py  test_update_codex_metrics.py
oss/tests/cli/: test_metrics_cli.py
oss/tests/domain/: test_metrics_domain.py  test_metrics_domain_properties.py
oss/tests/history/: test_history_audit.py  test_history_classify.py  test_history_compare.py  test_history_derive.py  test_history_ingest.py  test_history_normalize.py  test_history_normalize_properties.py  test_history_pipeline_json.py
oss/tests/infra/: test_cost_audit.py  test_public_boundary.py  test_public_overlay.py  test_security.py
oss/tests/reporting/: test_reporting.py  test_retro_timeline.py  test_show_json.py
oss/tests/workflow/: test_git_state.py  test_workflow_fsm.py
pricing/: model_pricing.json
reports/: report.html
scripts/: build_standalone.py  check_live_usage_recovery.py  export_public_tree.py  metrics_cli.py  public_overlay.py  update_codex_metrics.py
tests/: conftest.py  test_claude_md.py  test_commit_message.py  test_cost_audit.py  test_export_public_tree.py  test_git_hooks.py  test_git_state.py  test_history_audit.py  test_history_classify.py  test_history_compare.py  test_history_derive.py  test_history_ingest.py  test_history_normalize.py  test_history_normalize_properties.py  test_history_pipeline_json.py  test_html_report.py  test_metrics_cli.py  test_metrics_domain.py  test_metrics_domain_properties.py  test_observability.py  test_public_boundary.py  test_public_overlay.py  test_reporting.py  test_retro_timeline.py  test_show_json.py  test_storage_immutability.py  test_storage_roundtrip.py  test_update_codex_metrics.py  test_update_codex_metrics_domain.py  test_workflow_fsm.py
tools/: ai-agents-metrics  codex-metrics
(+256 files in other folders)
