[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-metrics"
dynamic = ["version"]
description = "CLI for tracking AI agent task metrics: token cost, retry pressure, and outcome quality."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [
    "ai-agents",
    "llm",
    "metrics",
    "token-cost",
    "cost-tracking",
    "claude-code",
    "codex",
    "observability",
    "developer-productivity",
    "retry-pressure",
    "agent-metrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "coverage[toml]", "setuptools>=82", "build", "bandit", "radon", "import-linter", "pylint"]

[project.scripts]
ai-agents-metrics = "ai_agents_metrics.cli:console_main"
codex-metrics = "ai_agents_metrics.cli:console_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
search_parent_directories = true
write_to = "src/ai_agents_metrics/_version.py"
fallback_version = "0.0.0.dev0"

[tool.setuptools.package-data]
ai_agents_metrics = ["data/*.json", "data/*.md"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "F",
  "I",
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true
files = [
  "src/ai_agents_metrics",
  "scripts/metrics_cli.py",
]
exclude = [
  "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "ai_agents_metrics._version"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
parallel = true
source = [
  "ai_agents_metrics",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.codex_tests]
scripts = "scripts"
src = "src"

[tool.importlinter]
root_packages = ["ai_agents_metrics"]

[[tool.importlinter.contracts]]
name = "Domain layer must not import from CLI or orchestration"
type = "forbidden"
source_modules = ["ai_agents_metrics.domain"]
forbidden_modules = [
    "ai_agents_metrics.cli",
    "ai_agents_metrics.cli_parser",
    "ai_agents_metrics.cli_usage",
    "ai_agents_metrics.commands",
    "ai_agents_metrics.commands_install",
    "ai_agents_metrics.pricing",
    "ai_agents_metrics.storage",
    "ai_agents_metrics.reporting",
    "ai_agents_metrics.workflow_fsm",
    "ai_agents_metrics.history.ingest",
    "ai_agents_metrics.history.normalize",
    "ai_agents_metrics.history.derive",
    "ai_agents_metrics.history.derive_insert",
    "ai_agents_metrics.history.derive_build",
    "ai_agents_metrics.history.derive_schema",
    "ai_agents_metrics.history.compare",
    "ai_agents_metrics.history.compare_store",
    "ai_agents_metrics.history.audit",
]

[[tool.importlinter.contracts]]
name = "Storage module must not import from domain or above"
type = "forbidden"
source_modules = ["ai_agents_metrics.storage"]
forbidden_modules = [
    "ai_agents_metrics.domain",
    "ai_agents_metrics.cli",
    "ai_agents_metrics.cli_parser",
    "ai_agents_metrics.cli_usage",
    "ai_agents_metrics.commands",
    "ai_agents_metrics.commands_install",
    "ai_agents_metrics.pricing",
    "ai_agents_metrics.reporting",
]

[[tool.importlinter.contracts]]
name = "History pipeline follows ingest -> normalize -> derive -> compare order"
type = "layers"
layers = [
    "ai_agents_metrics.history.compare : ai_agents_metrics.history.compare_store : ai_agents_metrics.history.audit",
    "ai_agents_metrics.history.derive",
    "ai_agents_metrics.history.derive_insert",
    "ai_agents_metrics.history.derive_build",
    "ai_agents_metrics.history.derive_schema",
    "ai_agents_metrics.history.normalize",
    "ai_agents_metrics.history.ingest",
]

[tool.pylint.main]

[tool.pylint."messages control"]
disable = "all"
# Tier 1 — hard-fail (build-blocking):
#   E0401 import-error, E0602 undefined-variable, E1101 no-member, E1120 no-value-for-argument
#   W0102 dangerous-default-value, W0611 unused-import, W0612 unused-variable,
#   W0718 broad-exception-caught, W1203 logging-fstring-interpolation
#   R0401 cyclic-import, C0302 too-many-lines
# Tier 2 — soft complexity warnings (advisory, non-blocking via || true in Makefile):
#   R0912 too-many-branches, R0913 too-many-arguments, R0914 too-many-locals,
#   R0915 too-many-statements, R0902 too-many-instance-attributes, W0401 wildcard-import
#   C0411 wrong-import-order
enable = [
    "E0401",
    "E0602",
    "E1101",
    "E1120",
    "W0102",
    "W0611",
    "W0612",
    "W0718",
    "W1203",
    "R0401",
    "C0302",
    "R0912",
    "R0913",
    "R0914",
    "R0915",
    "R0902",
    "W0401",
    "C0411",
]

[tool.pylint.design]
max-module-lines = 1000
max-args = 8
max-locals = 20
max-branches = 15
max-statements = 60
max-attributes = 10
