[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-metrics"
dynamic = ["version"]
description = "CLI for tracking AI agent task metrics: token cost, retry pressure, and outcome quality."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [
    "ai-agents",
    "llm",
    "metrics",
    "token-cost",
    "cost-tracking",
    "claude-code",
    "codex",
    "observability",
    "developer-productivity",
    "retry-pressure",
    "agent-metrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-xdist", "pytest-timeout", "hypothesis", "coverage[toml]", "setuptools>=82", "build", "bandit", "radon", "import-linter", "pylint"]

[project.scripts]
ai-agents-metrics = "ai_agents_metrics.cli:console_main"
codex-metrics = "ai_agents_metrics.cli:console_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
search_parent_directories = true
write_to = "src/ai_agents_metrics/_version.py"
fallback_version = "0.0.0.dev0"

[tool.setuptools.package-data]
ai_agents_metrics = ["data/*.json", "data/*.md"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "B",     # flake8-bugbear
  "C4",    # comprehensions
  "ERA",   # eradicate commented-out code
  "F",     # pyflakes
  "FURB",  # refurb modernizations
  "I",     # isort
  "PERF",  # perflint
  "PGH",   # pygrep-hooks
  "PTH",   # flake8-use-pathlib
  "Q",     # quotes
  "RET",   # return simplifications
  "RSE",   # raise statements
  "SIM",   # simplifications
  "TC",    # type-checking block hygiene
  "UP",    # pyupgrade
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true
files = [
  "src/ai_agents_metrics",
  "scripts/metrics_cli.py",
]
exclude = [
  "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "ai_agents_metrics._version"
ignore_missing_imports = true

# Strict gating for the modules that carry the invariants: domain/ holds the
# canonical record shapes and validators; history/ pipes raw agent state into
# those records. Both already pass --strict. We enable the individual strict
# flags (rather than ``strict = true``) because mypy ≤ 1.20 has a subtle bug
# where ``strict = true`` in a per-module override leaks ``warn_return_any``
# into modules that do not match the override pattern.
[[tool.mypy.overrides]]
module = [
    "ai_agents_metrics.domain.*",
    "ai_agents_metrics.history.*",
]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.coverage.run]
branch = true
parallel = true
source = [
  "ai_agents_metrics",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
addopts = "-n auto"
timeout = 5

[tool.codex_tests]
scripts = "scripts"
src = "src"

[tool.importlinter]
root_packages = ["ai_agents_metrics"]

[[tool.importlinter.contracts]]
name = "Domain layer must not import from CLI or orchestration"
type = "forbidden"
source_modules = ["ai_agents_metrics.domain"]
forbidden_modules = [
    "ai_agents_metrics.cli",
    "ai_agents_metrics.commands",
    "ai_agents_metrics.storage",
    "ai_agents_metrics.reporting",
    "ai_agents_metrics.workflow_fsm",
    "ai_agents_metrics.history.ingest",
    "ai_agents_metrics.history.normalize",
    "ai_agents_metrics.history.derive",
    "ai_agents_metrics.history.derive_insert",
    "ai_agents_metrics.history.derive_build",
    "ai_agents_metrics.history.derive_schema",
    "ai_agents_metrics.history.compare",
    "ai_agents_metrics.history.compare_store",
    "ai_agents_metrics.history.audit",
]

[[tool.importlinter.contracts]]
name = "Storage module must not import from domain or above"
type = "forbidden"
source_modules = ["ai_agents_metrics.storage"]
forbidden_modules = [
    "ai_agents_metrics.domain",
    "ai_agents_metrics.cli",
    "ai_agents_metrics.commands",
    "ai_agents_metrics.reporting",
]

[[tool.importlinter.contracts]]
name = "History pipeline follows ingest -> normalize -> derive -> compare order"
type = "layers"
layers = [
    "ai_agents_metrics.history.compare : ai_agents_metrics.history.compare_store : ai_agents_metrics.history.audit",
    "ai_agents_metrics.history.derive",
    "ai_agents_metrics.history.derive_insert",
    "ai_agents_metrics.history.derive_build",
    "ai_agents_metrics.history.derive_schema",
    "ai_agents_metrics.history.normalize",
    "ai_agents_metrics.history.ingest",
]

[[tool.importlinter.contracts]]
name = "usage_backends must not import from cli"
type = "forbidden"
source_modules = ["ai_agents_metrics.usage_backends"]
forbidden_modules = ["ai_agents_metrics.cli"]

[[tool.importlinter.contracts]]
name = "usage_resolution must not import from cli or usage_backends"
type = "forbidden"
source_modules = ["ai_agents_metrics.usage_resolution"]
forbidden_modules = [
    "ai_agents_metrics.cli",
    "ai_agents_metrics.usage_backends",
]

[[tool.importlinter.contracts]]
name = "Package modules must not import cli outside the entrypoint shim"
# `__main__` (the console entrypoint shim) is the sole legitimate importer of
# `cli`. Every other package module must stay off `cli` so `cli.py` can keep
# evolving without pulling every module into its transitive import graph.
#
# `as_packages=True` (the default) means entries like `ai_agents_metrics.domain`
# and `ai_agents_metrics.history` cover their whole subpackage tree, so new
# submodules under `domain/` or `history/` inherit the guardrail automatically.
# Wildcarding the whole top-level `ai_agents_metrics` package is not possible
# here because import-linter rejects overlap between source and forbidden sets.
type = "forbidden"
source_modules = [
    "ai_agents_metrics._report_aggregation",
    "ai_agents_metrics._report_buckets",
    "ai_agents_metrics._report_template",
    "ai_agents_metrics._version",
    "ai_agents_metrics.bootstrap",
    "ai_agents_metrics.commands",
    "ai_agents_metrics.commit_message",
    "ai_agents_metrics.completion",
    "ai_agents_metrics.cost_audit",
    "ai_agents_metrics.domain",
    "ai_agents_metrics.event_store",
    "ai_agents_metrics.file_immutability",
    "ai_agents_metrics.git_hooks",
    "ai_agents_metrics.git_state",
    "ai_agents_metrics.history",
    "ai_agents_metrics.html_report",
    "ai_agents_metrics.observability",
    "ai_agents_metrics.pricing_runtime",
    "ai_agents_metrics.public_boundary",
    "ai_agents_metrics.redaction",
    "ai_agents_metrics.reporting",
    "ai_agents_metrics.retro_timeline",
    "ai_agents_metrics.runtime_facade",
    "ai_agents_metrics.security",
    "ai_agents_metrics.storage",
    "ai_agents_metrics.usage_backends",
    "ai_agents_metrics.usage_resolution",
    "ai_agents_metrics.workflow_fsm",
]
forbidden_modules = ["ai_agents_metrics.cli"]

[tool.pylint.main]
# All modules are covered. Previously excluded files (cli.py, commands.py, history/ingest.py)
# carry per-file pylint: disable comments for C0302 (too-many-lines) until those files are split.
# _version.py is auto-generated by setuptools_scm on every editable install,
# so any in-file disable annotation would be wiped on the next regeneration.
# The ^\.# default is kept because it matches Emacs lock files.
ignore-patterns = ["^\\.#", "^_version\\.py$"]

[tool.pylint."messages control"]
# Pylint runs with its full default rule set. Thresholds for the complexity
# family (R09xx) live in [tool.pylint.design]; line-length, docstring, and
# similarity knobs live in their dedicated sections below.
#
# The `disable` list below enumerates the rules we deliberately keep off,
# each with a reason. See docs/architecture/ARCH-019..ARCH-022 for the
# history of how this list was curated and the per-file inline disables
# that cover canonical data schemas, CLI-contract boundary functions, and
# architecturally-required lazy imports.
disable = [
    # Function and class docstring coverage would add hundreds of trivial
    # 1-line annotations with no real signal beyond what well-named
    # identifiers already convey. Module-level docstrings (C0114) ARE
    # enforced — every src/ module carries a 1-line purpose statement.
    "missing-class-docstring",      # C0115
    "missing-function-docstring",   # C0116
    # Fires on every @dataclass and Protocol — wrong signal for this codebase.
    "too-few-public-methods",       # R0903
    # Fires on the intentional cli.main dispatch chain that
    # test_main_passes_runtime_facade_to_every_command_handler enforces.
    "too-many-return-statements",   # R0911
    # Informational echoes of our inline `# pylint: disable=...` annotations
    # — every such annotation carries a documented architectural reason, so
    # pylint echoing them back would just be noise.
    "locally-disabled",             # I0011
    "suppressed-message",           # I0020
]

[tool.pylint.design]
max-module-lines = 1000
max-args = 8
max-locals = 20
max-branches = 15
max-statements = 60
max-attributes = 10

[tool.pylint.format]
max-line-length = 250

[tool.pylint.similarities]
min-similarity-lines = 40
