[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-metrics"
dynamic = ["version"]
description = "CLI for tracking AI agent task metrics: token cost, retry pressure, and outcome quality."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "coverage[toml]"]

[project.scripts]
ai-agents-metrics = "ai_agents_metrics.cli:console_main"
codex-metrics = "ai_agents_metrics.cli:console_main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."
write_to = "src/ai_agents_metrics/_version.py"
fallback_version = "0.0.0.dev0"

[tool.setuptools.package-data]
ai_agents_metrics = ["data/*.json", "data/*.md"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "F",
  "I",
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true
files = [
  "src/ai_agents_metrics",
  "scripts/update_codex_metrics.py",
]
exclude = [
  "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "ai_agents_metrics._version"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
parallel = true
source = [
  "ai_agents_metrics",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.codex_tests]
scripts = "scripts"
src = "src"
